Change find your audience category layout to display flex to avoid white space
ready #624

--- a/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
+++ b/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
@@ -34,6 +34,7 @@
 		color: $colorPrimary;
 		text-decoration: none;
 		transition: color 0.2s $easeInOutCubic;
+	  	margin-bottom: $sizeGrid;
 	}
 
 	.sub-heading {
