--- a/source/frontend/src/block/FindYourAudience/FindYourAudienceCategory/FindYourAudienceCategory.scss
+++ b/source/frontend/src/block/FindYourAudience/FindYourAudienceCategory/FindYourAudienceCategory.scss
@@ -25,10 +25,12 @@
 		font-size: 0;
 		width: calc(100% + #{$sizeGrid * 2});
 		margin-left: -$sizeGrid;
+	  	display: flex;
+	  	flex-wrap: wrap;
 	}
 
 	.item {
-		@include size(calc(50% - #{$sizeGrid * 2}), 700px);
+		@include size(calc(50% - #{$sizeGrid * 2}), auto);
 		margin-left: $sizeGrid;
 		margin-right: $sizeGrid;
 		position: relative;
